Make sure menu works on small screens
BB-12544 #resolve

--- a/bluebottle/bluebottle_dashboard/static/jet/css/themes/goodup/_extra.scss
+++ b/bluebottle/bluebottle_dashboard/static/jet/css/themes/goodup/_extra.scss
@@ -32,13 +32,6 @@
     color: #ffffff;
 }
 
-/* Hide hamburger */
-
-.sidebar-opened .icon-menu:before,
-.sidebar-dependent .icon-menu:before{
-    content: "";
-}
-
 /* Extra labels */
 
 .admin-label {
